# Lunaris-Socket

./: .gitignore  CMakeLists.txt  README.md  socket.h  socket.ipp
.github/workflows/: deploy_library.yaml  test_validator.yaml
_minimalist_bkp/: hardcoded.h
cmake/: install.cmake
example/: CMakeLists.txt  main.cpp
include/Lunaris/: base_socket.h  debugging.h  exception.h  platform.h  socket.h  tcp_socket.h  tools.h  types.h  udp_socket.h
src/: base_socket.cpp  dataframe.cpp  exception.cpp  platform_linux.cpp  platform_windows.cpp  socket.cpp  tcp_socket.cpp  tools.cpp  udp_socket.cpp
tests/: CMakeLists.txt
tests/_wip/: hello_world.cpp  tcp_integration_test.cpp  udp_integration_tests.cpp
tests/src/: common.h  dataframe_tests.cpp  ex.cpp  hello_world.cpp  integration_test.cpp  tcp_simple_test.cpp  tools_tests.cpp  udp_broadcast_test.cpp  udp_multicast_test.cpp  udp_simple_test.cpp
tests/src/wrong/: udp_broadcast_keep_test.cpp
